[tool.poetry]
name = "xlsxwriter-til"
version = "0.1.0"
description = "TIL of XlsxWriter"
authors = ["Koichiro Okamoto <kchrkmt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
XlsxWriter = "^1.2.9"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

